add major layout

--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>git merge tutorial</title>
+    <link rel="stylesheet" href="layout.css">
 </head>
 <body>
-    
+    <div class="container">
+        <nav>this is the navbar</nav>
+        <header>header</header>
+        <section>sectiom </section>
+         <article>article</article>
+        <form action="">newsletter</form>
+        <footer>footer</footer>
+
+    </div>
 </body>
 </html>
