added style and content to the navbar

--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>git merge tutorial</title>
     <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="nav.css">
 </head>
 <body>
     <div class="container">
-        <nav>this is the navbar</nav>
+        <nav>
+            <div>git merge tutorial</div>
+            <ul>
+                <li>home</li>
+                <li>about</li>
+                <li>contact</li>
+            </ul>
+        </nav>
+
+
+
+
         <header>header</header>
         <section>sectiom </section>
          <article>article</article>
